# Openclassrooms_P8

./: .dockerignore  .gitignore  Dockerfile  init_db.sh  pyproject.toml  pytest.ini
.github/workflows/: cd.yml  ci.yml
app/: main.py
app/api/: schemas.py
app/api/routes/: ddl.py  model_info.py  predict.py
app/db/: base.py  create_db.py  database.py  import_dataset_to_db.py  models_db.py
app/db/actions/: get_prediction_from_db.py  save_prediction_to_db.py
app/ml/: model.py
app/utils/: base_class_ml.py  clean_for_json_db.py  features_type_list.py  hash_id.py  inference_process.py  input_preproc.py  logger_db.py  save_load_datas.py
app/utils/monitoring/: data_extractor_for_analysis.py  profiling.py
datas/results/model/: best_model.pkl
datas/results/threshold_opt/: thresh_opt.json
notebooks/: data_drift_analysis.ipynb
tests/: conftest.py
tests/fixtures/: fake_profile_happy_path.yml  fake_profile_missing_features.yml  fake_profile_outliers.yml  fake_profile_over_featured.yml
tests/func/: test_predict_E2E.py
tests/func/api/: test_ddl.py  test_main.py  test_routes.py
tests/integration/: test_integration.py
tests/integration/db/: test_database.py
tests/unit/: test_model.py  test_schemas.py  test_utils.py
